--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,7 +159,9 @@ img.article-image {
   max-width: 550px;
   margin: auto;
 }
-
+body{
+  background-color: #424242;
+}
 footer {
   background-size: cover;
 }
