--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,67 +76,6 @@
   display: none;
 }
 
-.portfolio-logo-row {
-  min-height: 200px;
-}
-
-.is-compact .portfolio-logo-row {
-  min-height: auto;
-}
-
-.portfolio-logo {
-  background: url(../images/logo.png) 50% no-repeat;
-  background-size: cover;
-  height: 150px;
-  width: 150px;
-  margin: auto auto 10px;
-}
-
-.is-compact .portfolio-logo {
-  height: 50px;
-  width: 50px;
-  margin-top: 7px;
-}
-
-.portfolio-navigation-row {
-  background-color: rgba(0, 0, 0, 0.08);
-  text-transform: uppercase;
-  height: 45px;
-}
-
-.portfolio-navigation-row .mdl-navigation {
-  text-align: center;
-  max-width: 900px;
-  width: 100%;
-}
-
-.portfolio-navigation-row .mdl-navigation__link {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  line-height: 42px;
-}
-
-.portfolio-header .mdl-layout__drawer-button {
-  background-color: rgba(197, 197, 197, 0.44);
-}
-
-.portfolio-navigation-row .is-active {
-  position: relative;
-  font-weight: bold;
-}
-
-.portfolio-navigation-row .is-active:after {
-  content: "";
-  width: 70%;
-  height: 2px;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: rgb(30, 69, 31);
-  left: 15%;
-}
 
 .portfolio-card .mdl-card__title {
   padding-bottom: 0;
@@ -157,13 +96,9 @@ img.article-image {
   height: auto;
 }
 
-.portfolio-max-width {
+.breakageReport-max-width {
   max-width: 900px;
   margin: auto;
-}
-
-.portfolio-copy {
-  max-width: 700px;
 }
 
 .no-padding {
@@ -178,31 +113,7 @@ img.article-image {
   padding-bottom: 0;
 }
 
-.padding-top {
-  padding: 10px 0 0;
-}
-
-.portfolio-share-btn {
-  position: relative;
-  float: right;
-  top: -4px;
-}
-
-.demo-card-event>.mdl-card__actions {
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  box-sizing: border-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.portfolio-contact .mdl-textfield {
-  width: 100%;
-}
-
-.portfolio-contact form {
+.breakageReport form {
   max-width: 550px;
   margin: auto;
 }
@@ -213,44 +124,4 @@ body {
 
 footer {
   background-size: cover;
-}
-
-.social {
-  width: 15rem;
-  max-width: 80%;
-  margin: 1rem auto 0;
-  padding: 0;
-  list-style: none;
-}
-
-.social li {
-  margin: 0;
-  padding: 0;
-}
-
-.social li a {
-  display: block;
-  position: relative;
-  padding-left: 3rem;
-  color: #999;
-  vertical-align: middle;
-  line-height: 2rem;
-  transition: color 0.2s ease;
-}
-
-.social li a:hover {
-  color: #00aeef;
-}
-
-.social li a::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1em;
-  height: 1em;
-  font: normal 2rem/1em "FontAwesome";
-}
-
-.social li a[rel="github"]::before {
-  content: '\f09b';
 }
