--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,42 @@
 .toolbar-spacer {
   flex: 1 1 auto;
 }
+
+#menuSpacer {
+  width: 10px;
+}
+
+#menuLogo {
+  height: 55px;
+  vertical-align: middle;
+}
+
+#menuTitle {
+  text-align: center;
+  font-weight: 300;
+}
+
+#logo-image-drawer {
+  height: 150px;
+}
+
+/deep/ .mat-tab-link {
+  line-height: 28px !important;
+  height: 28px !important;
+}
+
+/deep/ .mat-tab-header {
+  color: white !important;
+  border-radius: 5px 5px 0px 0px;
+}
+
+/deep/ .mat-tab-link {
+  font-size: 16px;
+  opacity: 1 !important;
+  color: white !important;
+}
+
+/deep/ .mat-ink-bar {
+  background-color: #0077c2 !important;
+  min-width: 120px;
+}
