--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,40 @@
 <md-sidenav-container fullscreen>
   <md-sidenav #sidenav mode="push">
+    <img id="logo-image-drawer" src="assets/images/logoNoText.png" />
     <md-nav-list>
-      <a md-list-item routerLink="/report" routerLinkActive="active">Report Breakage</a>
-      <a md-list-item routerLink="/reported" routerLinkActive="active">Reported Breakages</a>
-      <a md-list-item routerLink="/fixed" routerLinkActive="active">Fixed Breakages</a>
+      <a md-list-item
+          *ngFor="let routeLink of routeLinks; let i = index"
+          [routerLink]="routeLink.link"
+          (click)="activeLinkIndex = i; sidenav.close()">
+          {{routeLink.label}}
+      </a>
     </md-nav-list>
   </md-sidenav>
 
   <div>
-    <md-toolbar color="accent">
-        <button md-icon-button (click)="sidenav.open()">
+    <md-toolbar color="primary">
+      <button md-icon-button (click)="sidenav.open()">
           <md-icon>menu</md-icon>
         </button>
-      <span>{{title}}</span>
+      <span id="menuSpacer"></span>
+      <span><img id="menuLogo" src="assets/images/logoNoText.png" /></span>
+      <span id="menuSpacer"></span>
+      <span id="menuTitle">
+        {{title}}
+      </span>
 
       <!-- This fills the remaining space of the current row -->
       <span class="toolbar-spacer"></span>
 
       <span>
         <nav md-tab-nav-bar>
-          <a md-tab-link routerLink="/report" routerLinkActive>Report Breakage</a>
-          <a md-tab-link routerLink="/reported" routerLinkActive>Reported Breakages</a>
-          <a md-tab-link routerLink="/fixed" routerLinkActive>Fixed Breakages</a>
+          <a md-tab-link
+              *ngFor="let routeLink of routeLinks; let i = index"
+              [routerLink]="routeLink.link"
+              [active]="activeLinkIndex === i"
+              (click)="activeLinkIndex = i">
+              {{routeLink.label}}
+          </a>
         </nav>
       </span>
     </md-toolbar>
