--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -1,3 +1,54 @@
-<p>
-  report-usage works!
-</p>
+<md-card>
+  <md-card-header>
+    <md-card-title>{{title}}</md-card-title>
+  </md-card-header>
+  <md-card-content>
+    <form (ngSubmit)="onSubmit()" #usageForm="ngForm">
+      <table>
+        <tr>
+          <td>
+            <md-radio-group class="radio-group" [(ngModel)]="selectedBoat" name="boat" required [formControl]="boatFormControl">
+              <label> Boat Number</label>
+              <md-radio-button class="radio-button" *ngFor="let id of boats" [value]="id">
+                {{id}}
+              </md-radio-button>
+              <md-error *ngIf="boatFormControl.hasError('required')">
+                This is a required field
+              </md-error>
+            </md-radio-group>
+            <br />
+          </td>
+          <td>
+            <table>
+              <tr>
+                <md-input-container>
+                  <input mdInput type="number" [(ngModel)]="duration" placeholder="Duration in hours" name="duration" [min]=0 required [formControl]="durationFormControl">
+                  <md-error *ngIf="durationFormControl.hasError('pattern')">
+                    Please enter a valid duration in hours
+                  </md-error>
+                  <md-error *ngIf="durationFormControl.hasError('required')">
+                    This is a required field
+                  </md-error>
+                </md-input-container>
+              </tr>
+              <tr>
+                <md-input-container>
+                  <input mdInput [mdDatepicker]="picker" [max]="maxDate" [(ngModel)]="date" placeholder="Choose a date" name="date" required [formControl]="dateFormControl">
+                  <button mdSuffix [mdDatepickerToggle]="picker"></button>
+                  <md-error *ngIf="dateFormControl.hasError('required')">
+                    This is a required field
+                  </md-error>
+                </md-input-container>
+                <md-datepicker #picker></md-datepicker>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+      <br  />
+    <button md-raised-button color="primary" [disabled]="!(this.durationFormControl.valid && this.dateFormControl.valid && this.boatFormControl.valid)" type="submit">Submit</button>
+    </form>
+
+
+  </md-card-content>
+</md-card>
