--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
+md-sidenav-container {
+  background: #eceff1;
+}
+
+md-sidenav-container.app-dark {
+  background: #212121;
+}
+
 .toolbar-spacer {
   flex: 1 1 auto;
 }
