--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <md-sidenav-container fullscreen [class.app-dark]="isDarkTheme">
   <md-sidenav #sidenav mode="push">
-    <img id="logo-image-drawer" src="assets/images/logoNoText.png" />
+    <span><img id="logo-image-drawer" src="assets/images/logoNoText.png" /></span>
+
     <md-nav-list>
       <a md-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="activeLinkIndex = i; sidenav.close()">
           {{routeLink.label}}
