--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <md-sidenav-container fullscreen [class.app-dark]="isDarkTheme">
   <md-sidenav #sidenav mode="push">
-    <span><img id="logo-image-drawer" src="assets/images/logoNoText.png" /></span>
-
+    <img id="logo-image-drawer" src="assets/images/logoNoText.png" />
     <md-nav-list>
       <a md-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="activeLinkIndex = i; sidenav.close()">
           {{routeLink.label}}
       </a>
     </md-nav-list>
-     <button md-button (click)="isDarkTheme = !isDarkTheme">TOGGLE DARK THEME</button>
+     <button md-button (click)="toggleDark()">TOGGLE DARK THEME</button>
   </md-sidenav>
 
   <div>
@@ -38,7 +37,7 @@
       </span>
     </md-toolbar>
     <div fxLayout="row">
-      <div fxFlex="20" fxFlex.lt-md="5">
+      <div fxFlex="20" fxFlex.lt-md="2">
 
       </div>
       <div fxFlex>
@@ -47,7 +46,7 @@
         </md-card>
       </div>
 
-      <div fxFlex="20" fxFlex.lt-md="5">
+      <div fxFlex="20" fxFlex.lt-md="2">
 
       </div>
     </div>
