--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -1,6 +1,4 @@
-  <md-card-header>
-    <md-card-title>{{title}}</md-card-title>
-  </md-card-header>
+  <h2>{{title}}</h2>
   <md-card-content>
     <form (ngSubmit)="onSubmit()" [formGroup]="usageForm" novalidate>
       <table>
