--- a/src/app/report-issue/report-issue.component.html
+++ b/src/app/report-issue/report-issue.component.html
@@ -1,3 +1,49 @@
-<p>
-  report-issue works!
-</p>
+<h2>{{title}}</h2>
+<md-card-content>
+  <form (ngSubmit)="onSubmit()" [formGroup]="breakageForm" novalidate>
+
+    <h3>Personal Details</h3>
+
+    <md-input-container class="full-width"> <input mdInput type="text" placeholder="Name" formControlName="name" required>
+      <md-error *ngIf="formErrors.name">
+        {{formErrors.name}}
+      </md-error>
+    </md-input-container>
+
+    <md-input-container class="full-width">
+      <input mdInput type="email" placeholder="Contact" formControlName="contact" required>
+      <md-error *ngIf="formErrors.contact">
+        {{formErrors.contact}}
+      </md-error>
+    </md-input-container>
+
+    <h3>Breakage Info</h3>
+
+    <md-select class="select-width" placeholder="Boat Number" formControlName="boatID" required>
+      <md-option *ngFor="let id of boats" [value]="id">{{id}}</md-option>
+      <md-error *ngIf="formErrors.boatID">
+        {{formErrors.boatID}}
+      </md-error>
+    </md-select>
+    <br />
+    <br />
+    <md-select class="select-width" placeholder="Importance" formControlName="importance" required>
+      <md-option *ngFor="let id of levels" [value]="id">{{id}}</md-option>
+      <md-error *ngIf="formErrors.importance">
+        {{formErrors.importance}}
+      </md-error>
+    </md-select>
+
+    <md-input-container class="full-width">
+      <textarea mdInput type="text" placeholder="Describe the Issue" formControlName="details" required rows="5"> </textarea>
+      <md-error *ngIf="formErrors.details">
+        {{formErrors.details}}
+      </md-error>
+    </md-input-container>
+
+    <br />
+    <br />
+    <button md-raised-button color="primary" type="submit">Submit</button>
+  </form>
+
+</md-card-content>
