--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -1,3 +1,4 @@
+<md-card>
   <h2>{{title}}</h2>
   <md-card-content>
     <form (ngSubmit)="onSubmit()" [formGroup]="usageForm" novalidate>
@@ -44,3 +45,4 @@
     </form>
 
   </md-card-content>
+</md-card>
