basic cards, view recent breakages

--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -41,7 +41,7 @@
         </tr>
       </table>
       <br  />
-    <button md-raised-button color="primary" type="submit">Submit</button>
+    <button md-raised-button color="accent" type="submit">Submit</button>
     </form>
 
   </md-card-content>
