--- a/src/app/report-issue/report-issue.component.css
+++ b/src/app/report-issue/report-issue.component.css
@@ -9,3 +9,32 @@
 /deep/ .mat-option:hover {
   color: #29b6f6;
 }
+
+.breakage-card {
+  margin-top: 10px;
+}
+
+.breakage-card-header{
+
+}
+
+.breakage-card-left{
+  width: 200px;
+}
+
+.breakage-card-list {
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.breakage-card-details{
+  
+}
+
+.remove-button {
+  width: 80px;
+  height: 100%;
+  display:flex;
+  align-items: center;
+  text-align: center;
+}
