--- a/src/app/report-issue/report-issue.component.html
+++ b/src/app/report-issue/report-issue.component.html
@@ -1,60 +1,91 @@
 <md-card>
-<h2>{{title}}</h2>
-<md-card-content>
-  <form (ngSubmit)="onSubmit()" [formGroup]="breakageForm" novalidate>
+  <h2>{{title}}</h2>
+  <md-card-content>
+    <form (ngSubmit)="onSubmit()" [formGroup]="breakageForm" novalidate>
 
-    <h3>Personal Details</h3>
+      <h3>Personal Details</h3>
 
-    <md-input-container class="full-width"> <input mdInput type="text" placeholder="Name" formControlName="name" required>
-      <md-error *ngIf="formErrors.name">
-        {{formErrors.name}}
-      </md-error>
-    </md-input-container>
+      <md-input-container class="full-width"> <input mdInput type="text" placeholder="Name" formControlName="name" required>
+        <md-error *ngIf="formErrors.name">
+          {{formErrors.name}}
+        </md-error>
+      </md-input-container>
 
-    <md-input-container class="full-width">
-      <input mdInput type="email" placeholder="Contact" formControlName="contact">
-      <md-error *ngIf="formErrors.contact">
-        {{formErrors.contact}}
-      </md-error>
-    </md-input-container>
+      <md-input-container class="full-width">
+        <input mdInput type="email" placeholder="Contact" formControlName="contact">
+        <md-error *ngIf="formErrors.contact">
+          {{formErrors.contact}}
+        </md-error>
+      </md-input-container>
 
-    <h3>Breakage Info</h3>
+      <h3>Breakage Info</h3>
 
-    <md-select class="select-width" placeholder="Boat Number" formControlName="boatID" required>
-      <md-option *ngFor="let id of boats" [value]="id">{{id}}</md-option>
-      <md-error *ngIf="formErrors.boatID">
-        {{formErrors.boatID}}
-      </md-error>
-    </md-select>
+      <md-select class="select-width" placeholder="Boat Number" formControlName="boatID" required>
+        <md-option *ngFor="let id of boats" [value]="id">{{id}}</md-option>
+        <md-error *ngIf="formErrors.boatID">
+          {{formErrors.boatID}}
+        </md-error>
+      </md-select>
 
-    <br />
-    <br />
+      <br />
+      <br />
 
-    <md-select class="select-width" placeholder="Importance" formControlName="importance" required>
-      <md-option *ngFor="let id of levels" [value]="id">{{id}}</md-option>
-      <md-error *ngIf="formErrors.importance">
-        {{formErrors.importance}}
-      </md-error>
-    </md-select>
+      <md-select class="select-width" placeholder="Importance" formControlName="importance" required>
+        <md-option *ngFor="let id of levels" [value]="id">{{id}}</md-option>
+        <md-error *ngIf="formErrors.importance">
+          {{formErrors.importance}}
+        </md-error>
+      </md-select>
 
-    <md-input-container class="full-width">
-      <textarea mdInput type="text" placeholder="Describe the Issue" formControlName="details" #details required rows="4" maxlength="256"> </textarea>
-      <md-hint align="end">{{details.value.length}} / 256</md-hint>
-      <md-error *ngIf="formErrors.details">
-        {{formErrors.details}}
-      </md-error>
-    </md-input-container>
+      <md-input-container class="full-width">
+        <textarea mdInput type="text" placeholder="Describe the Issue" formControlName="details" #details required rows="4" maxlength="256"> </textarea>
+        <md-hint align="end">{{details.value.length}} / 256</md-hint>
+        <md-error *ngIf="formErrors.details">
+          {{formErrors.details}}
+        </md-error>
+      </md-input-container>
 
-    <br />
-    <br />
-    <button md-raised-button color="primary" type="submit">Submit</button>
-  </form>
+      <br />
+      <br />
+      <button md-raised-button color="accent" type="submit">Submit</button>
+    </form>
 
-</md-card-content>
+  </md-card-content>
 </md-card>
 
-<ul>
-  <li class="text" *ngFor="let item of breakages | async">
-    {{item.boatID}}
-  </li>
-</ul>
+<md-card class="breakage-card" *ngFor="let item of breakages | async">
+  <md-card-content>
+    <div fxLayout="row" fxLayout.xs="column" fxFlex>
+      <div class="breakage-card-left">
+        <ul class="breakage-card-list">
+          <li>
+            Boat: {{item.boatID}}
+          </li>
+          <li>
+            {{item.importance}}
+          </li>
+          <li>
+            Reported by: {{item.name}}
+          </li>
+          <li>
+            {{item.contact}}
+          </li>
+        </ul>
+      </div>
+
+      <div fxFlex>
+        <p class="breakage-card-details">
+          Details: <br /> {{item.details}}
+        </p>
+      </div>
+
+    </div>
+
+  </md-card-content>
+    <hr />
+    <md-card-actions >
+      <button md-button color="warn" onclick="removeBreakage()">Remove</button>
+    </md-card-actions>
+
+
+</md-card>
