--- a/src/app/report-issue/report-issue.component.html
+++ b/src/app/report-issue/report-issue.component.html
@@ -84,7 +84,7 @@
   </md-card-content>
     <hr />
     <md-card-actions >
-      <button md-button color="warn" (click)="openDialog()">Remove</button>
+      <button md-button color="warn" (click)="openDialog(item)">Remove</button>
     </md-card-actions>
 
 
