--- a/src/app/report-issue/report-issue.component.html
+++ b/src/app/report-issue/report-issue.component.html
@@ -52,39 +52,4 @@
 
   </md-card-content>
 </md-card>
-
-<md-card class="breakage-card" *ngFor="let item of breakages | async">
-  <md-card-content>
-    <div fxLayout="row" fxLayout.xs="column" fxFlex>
-      <div class="breakage-card-left">
-        <ul class="breakage-card-list">
-          <li>
-            Boat: {{item.boatID}}
-          </li>
-          <li>
-            {{item.importance}}
-          </li>
-          <li>
-            Reported by: {{item.name}}
-          </li>
-          <li>
-            {{item.contact}}
-          </li>
-        </ul>
-      </div>
-
-      <div fxFlex>
-        <p class="breakage-card-details">
-          Details: <br /> {{item.details}}
-        </p>
-      </div>
-
-    </div>
-
-  </md-card-content>
-    <hr />
-    <md-card-actions >
-      <button md-button color="warn" (click)="openDialog(item)">Remove</button>
-    </md-card-actions>
-
-</md-card>
+<breakage-card [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
