boat filter for breakages

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -1,4 +1,4 @@
-<md-card class="breakage-card" *ngFor="let item of breakages | async">
+<md-card class="breakage-card" *ngFor="let item of breakages">
   <md-card-content>
     <div fxLayout="row" fxLayout.xs="column" fxFlex>
       <div class="breakage-card-left">
