--- a/src/app/view-issues/view-issues.component.html
+++ b/src/app/view-issues/view-issues.component.html
@@ -10,12 +10,14 @@
     <md-menu #filter="mdMenu">
       <button md-menu-item *ngFor="let filter of filterList" (click)="addFilter(filter)"> Boat {{filter}} </button>
     </md-menu>
-    <md-chip-list>
-      <md-chip *ngFor="let filter of appliedFilters" (click)="addFilter(filter)" selected="true"> Boat {{filter}}
-        <md-icon style="font-size:14px;height:14px;width:14px;font-size:14px;">cancel</md-icon>
-      </md-chip>
-    </md-chip-list>
   </span>
+
+  <md-chip-list>
+    <md-chip *ngFor="let filter of appliedFilters" (click)="addFilter(filter)" selected="true"> Boat {{filter}}
+      <md-icon style="font-size:16px;height:16px;width:16px;">cancel</md-icon>
+    </md-chip>
+  </md-chip-list>
+
 </md-card>
 
 <breakage-card [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
