implement mark as fixed

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -29,7 +29,7 @@
   </md-card-content>
     <hr />
     <md-card-actions >
-      <button md-button color="warn" (click)="openDialog(item)">Remove</button>
+      <button md-button color="warn" (click)="openDialog(item)">{{buttonText}}</button>
     </md-card-actions>
 
 </md-card>
