--- a/src/app/view-issues/view-issues.component.html
+++ b/src/app/view-issues/view-issues.component.html
@@ -20,4 +20,4 @@
 
 </md-card>
 
-<breakage-card [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
+<breakage-card [buttonText]="cardButtonText" [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
