--- a/src/app/report-issue/report-issue.component.html
+++ b/src/app/report-issue/report-issue.component.html
@@ -52,4 +52,4 @@
 
   </md-card-content>
 </md-card>
-<breakage-card [buttonText]="cardButtonText" [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
+<breakage-card [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
