--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
-    <button md-icon-button (click)="sidenav.toggle()">
+    <button style="margin-left:5px;" md-icon-button (click)="sidenav.toggle()">
       <md-icon>menu</md-icon>
     </button>
     <span id="menuSpacer"></span>
