--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,7 @@
   <md-sidenav #sidenav mode="push">
     <img id="logo-image-drawer" src="assets/images/logoNoText.png" />
     <md-nav-list>
-      <a md-list-item
-          *ngFor="let routeLink of routeLinks; let i = index"
-          [routerLink]="routeLink.link"
-          (click)="activeLinkIndex = i; sidenav.close()">
+      <a md-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="activeLinkIndex = i; sidenav.close()">
           {{routeLink.label}}
       </a>
     </md-nav-list>
@@ -26,7 +23,7 @@
       <!-- This fills the remaining space of the current row -->
       <span class="toolbar-spacer"></span>
 
-      <span>
+      <span fxHide.lt-md>
         <nav md-tab-nav-bar>
           <a md-tab-link
               *ngFor="let routeLink of routeLinks; let i = index"
@@ -38,7 +35,20 @@
         </nav>
       </span>
     </md-toolbar>
+    <div fxLayout="row">
+      <div fxFlex="20" fxFlex.lt-md="5">
 
-    <router-outlet></router-outlet>
+      </div>
+      <div fxFlex>
+        <md-card>
+          <router-outlet></router-outlet>
+        </md-card>
+      </div>
+
+      <div fxFlex="20" fxFlex.lt-md="5">
+
+      </div>
+    </div>
+
   </div>
 </md-sidenav-container>
