--- a/src/app/view-fixed/view-fixed.component.html
+++ b/src/app/view-fixed/view-fixed.component.html
@@ -1,2 +1,2 @@
 <sort-filter-bar [breakages]="breakages"></sort-filter-bar>
-<breakage-card [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
+<breakage-card [breakages]="breakages"></breakage-card>
