keep track of unchanging breakage

--- a/src/app/view-issues/view-issues.component.html
+++ b/src/app/view-issues/view-issues.component.html
@@ -1,2 +1,2 @@
-<sort-filter-bar [breakages]="breakages"></sort-filter-bar>
+<sort-filter-bar [breakages]="breakages" [original]="original"></sort-filter-bar>
 <breakage-card [buttonText]="cardButtonText" [breakages]="breakages" (onRemove)="openDialog($event)"></breakage-card>
