display time data

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -15,6 +15,16 @@
           <li>
             {{item.contact}}
           </li>
+          <li *ngIf="item.timestamp">
+            Reported: {{dateDisplay(item.timestamp)}}
+          </li>
+
+          <li *ngIf="item.timestampReported">
+            Reported: {{dateDisplay(item.timestampReported)}}
+          </li>
+          <li *ngIf="item.timestampFixed">
+            Fixed: {{dateDisplay(item.timestampFixed)}}
+          </li>
         </ul>
       </div>
 
