Display part on cards

--- a/src/app/breakage-card/breakage-card.component.html
+++ b/src/app/breakage-card/breakage-card.component.html
@@ -9,6 +9,9 @@
           <li>
             {{item.importance}}
           </li>
+          <li *ngIf="item.part">
+            Part: {{item.part}}
+          </li>
           <li>
             Reported by: {{item.name}}
           </li>
