--- a/src/app/report-usage/report-usage.component.html
+++ b/src/app/report-usage/report-usage.component.html
@@ -27,13 +27,14 @@
                 </md-input-container>
               </tr>
               <tr>
-                <md-input-container>
+                <md-form-field>
                   <input mdInput [mdDatepicker]="picker" formControlName="date" placeholder="Choose a Date" required [max]="maxDate">
-                  <button mdSuffix [mdDatepickerToggle]="picker"></button>
+                  <md-datepicker-toggle mdSuffix [for]="picker"></md-datepicker-toggle>
+                  <md-datepicker #picker [startAt]="maxDate"></md-datepicker>
                   <md-error *ngIf="formErrors.date">
                     {{formErrors.date}}
                   </md-error>
-                </md-input-container>
+                </md-form-field>
                 <md-datepicker #picker></md-datepicker>
               </tr>
             </table>
