--- a/src/app/usage-graphs/usage-graphs.component.html
+++ b/src/app/usage-graphs/usage-graphs.component.html
@@ -1,4 +1,4 @@
-<md-card>
+<md-card class="card_top_pad">
   <div>
     <div style="display: block">
       <canvas baseChart [datasets]="barChartData" [colors]="colors" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType"></canvas>
