resize with window tmp fix

--- a/src/app/usage-graphs/usage-graphs.component.html
+++ b/src/app/usage-graphs/usage-graphs.component.html
@@ -1,3 +1,5 @@
-<md-card class="card_top_pad">
+<div fxFlex="0" fxFlex.lt-md="1"></div>
+<md-card fxFlex="100" fxFlex.lt-md="98" class="card_top_pad">
       <canvas baseChart [datasets]="barChartData" [colors]="colors" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType"></canvas>
 </md-card>
+<div fxFlex="0" fxFlex.lt-md="1"></div>
