--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,11 @@
       <md-icon>menu</md-icon>
     </button>
   <span id="menuSpacer"></span>
-  <span><img id="menuLogo" src="assets/images/logoNoText.png" /></span>
+  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="WYST Logo" /></span>
   <span id="menuSpacer"></span>
   <span id="menuTitle">
     {{title}}
   </span>
-
   <!-- This fills the remaining space of the current row -->
   <span class="toolbar-spacer"></span>
 
@@ -26,7 +25,7 @@
 </md-toolbar>
 <md-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme">
   <md-sidenav class="sidenav" #sidenav mode="push">
-    <img id="logo-image-drawer" src="assets/images/logo.png" />
+    <img id="logo-image-drawer" src="assets/images/logo.png" alt="WYST Logo" />
     <md-nav-list>
       <a md-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="sidenav.close()">
           {{routeLink.label}}
