--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,16 +37,11 @@
 
   <div class="sidenav-content">
     <div fxLayout="row">
-      <div fxFlex="20" fxFlex.lt-md="2">
-
-      </div>
+      <div fxFlex="20" fxFlex.lt-md="2"></div>
       <div fxFlex>
         <router-outlet></router-outlet>
       </div>
-
-      <div fxFlex="20" fxFlex.lt-md="2">
-      </div>
+      <div fxFlex="20" fxFlex.lt-md="2"></div>
     </div>
-
   </div>
 </md-sidenav-container>
